--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Header */
@@ -39,6 +39,8 @@ header ul {
 
 header .logo {
     color: var(--color-main-text);
+    font-size: 24px;
+    font-weight: bold;
 }
 
 header a {
@@ -46,8 +48,83 @@ header a {
     text-decoration: none;
     color: var(--color-secondary-text);
     padding: 8px 16px;
+    font-size: 18px;
 }
 
 .push-right {
     margin-left: auto;
+}
+
+/* Hero */
+
+.hero {
+    background-color: var(--color-dark-background);
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    padding: 24px;
+    padding-block: 4rem;
+    color: var(--color-main-text);
+}
+
+.hero div {
+    flex: 0 1 calc(960px / 2);
+}
+
+.hero h1 {
+    font-size: 48px;
+    font-weight: bold;
+    margin-bottom: 4px;
+}
+
+.hero p {
+    margin-block: 8px;
+    color: var(--color-secondary-text);
+    font-size: 18px;
+}
+
+button {
+    background-color: var(--color-button);
+    color: var(--color-main-text);
+    padding: 8px 24px;
+    border: none;
+    border-radius: 6px;
+    font-weight: bold;
+}
+
+.hero-img {
+    width: 480px;
+    max-height: 260px;
+    object-fit: cover;
+    border-radius: 6px;
+}
+
+/* Info */
+
+.info {
+    margin-block: 4rem;
+}
+
+.info h2 {
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.card-container {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+
+.card {
+    flex: 0 1 240px;
+    text-align: center;
+}
+
+.card img {
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+    border: 3px solid var(--color-button);
+    border-radius: 10px;
 }
