--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ header a {
     justify-content: center;
     gap: 16px;
     padding: 24px;
-    padding-block: 4rem;
+    padding-block: 5rem;
     color: var(--color-main-text);
 }
 
@@ -90,6 +90,12 @@ button {
     border: none;
     border-radius: 6px;
     font-weight: bold;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: var(--color-main-text);
+    color: var(--color-quote-text);
 }
 
 .hero-img {
@@ -102,12 +108,13 @@ button {
 /* Info */
 
 .info {
-    margin-block: 4rem;
+    margin-block: 5rem;
 }
 
 .info h2 {
     text-align: center;
     margin-bottom: 2rem;
+    font-size: 36px;
 }
 
 .card-container {
@@ -127,4 +134,51 @@ button {
     object-fit: cover;
     border: 3px solid var(--color-button);
     border-radius: 10px;
+}
+
+/* Quote */
+
+.quote {
+    background-color: var(--color-quote-background);
+    display: flex;
+    justify-content: center;
+    padding: 5rem 24px;
+}
+
+.quote-container {
+    display: flex;
+    flex-direction: column;
+    width: 960px;
+}
+
+.quote blockquote {
+    max-width: 960px;
+    font-size: 36px;
+    color: var(--color-quote-text);
+    font-style: italic;
+}
+
+.quote p {
+    align-self: flex-end;
+    font-weight: bold;
+    margin-top: 1rem;
+}
+
+/* Call to action */
+
+.call-to-action {
+    background-color: var(--color-button);
+    width: 960px;
+    padding: 24px 96px;
+    margin: 5rem auto;
+    color: var(--color-main-text);
+    display: flex;
+    align-items: center;
+    gap: 24px;
+    border-radius: 10px;
+}
+
+.call-to-action button {
+    flex: 0 0 120px;
+    border: 2px solid white;
 }
